updated response type in docs
